--- a/terraform-gke/demo-app-chart/templates/configmap.yaml
+++ b/terraform-gke/demo-app-chart/templates/configmap.yaml
@@ -4,5 +4,5 @@ metadata:
   name: {{ .Release.Name }}-configmap
 data:
   myvalue: "Hello World"
-  drink: {{ .Values.favorite.drink }}
-  food: {{ .Values.favorite.food }}
+  drink: {{ .Values.favorite.drink | quote }}
+  food: {{ quote .Values.favorite.food }}
